create github pages

--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
 <meta name="twitter:title" content="Korusu - Imagination can deliver"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/korusu-trees-logo-v2-small-210x155.png" type="image/x-icon">
-  <meta name="description" content="">
+  <meta name="description" content="Consulting
+
+Marketing Communication
+*Message crafting *Visual documents *Helping you with ideas
+
+EU Project Services through Bologna, Italy
+Multi-sector * Market evaluations * Marketing campaigns * Sales Agency
+in partnership with Guidi Consulting
+
+Translations
+in partnership with Garavini Translations
+">
   
   <title>Korusu - Imagination can deliver</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
@@ -65,11 +76,11 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html website templates</a></section><section class="carousel slide cid-s2IOkizFks" data-interval="false" id="slider1-2j">
+<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="carousel slide cid-s2IOkizFks" data-interval="false" id="slider1-2j">
 
     
 
-    <div class="full-screen"><div class="mbr-slider slide carousel" data-pause="true" data-keyboard="false" data-ride="false" data-interval="false"><div class="carousel-inner" role="listbox"><div class="carousel-item slider-fullscreen-image" data-bg-video-slide="false" style="background-image: url(assets/images/imag1758-uyosemde-2000x1485.jpg);"><div class="container container-slide"><div class="image_wrapper"><img src="assets/images/imag1758-uyosemde-2000x1485.jpg" alt="" title=""><div class="carousel-caption justify-content-center"><div class="col-10 align-center"><h2 class="mbr-fonts-style display-2"><br>Welcome to Korusu<br></h2><p class="lead mbr-text mbr-fonts-style display-5"><strong><br></strong><br>Consulting<br>Marketing Communication<br>and<br>EU Projects through Bologna, Italy<br><br><br><br><br><strong><br></strong></p><div class="mbr-section-btn" buttons="0"><a class="btn display-4 btn-warning" href="portfolio.html">Marketing Communication<br>Portfolio<br></a> <a class="btn  display-4 btn-warning" href="EUportfolio.html">EU Projects <br>Portfolio<br></a></div></div></div></div></div></div><div class="carousel-item slider-fullscreen-image active" data-bg-video-slide="false" style="background-image: url(assets/images/peel-castle-sunset-1080x802.jpg);"><div class="container container-slide"><div class="image_wrapper"><div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(7, 59, 76);"></div><img src="assets/images/peel-castle-sunset-1080x802.jpg" alt="" title=""><div class="carousel-caption justify-content-center"><div class="col-10 align-center"><h2 class="mbr-fonts-style display-2">Marketing Communication
+    <div class="full-screen"><div class="mbr-slider slide carousel" data-pause="true" data-keyboard="false" data-ride="false" data-interval="false"><div class="carousel-inner" role="listbox"><div class="carousel-item slider-fullscreen-image active" data-bg-video-slide="false" style="background-image: url(assets/images/imag1758-uyosemde-2000x1485.jpg);"><div class="container container-slide"><div class="image_wrapper"><img src="assets/images/imag1758-uyosemde-2000x1485.jpg" alt="" title=""><div class="carousel-caption justify-content-center"><div class="col-10 align-center"><h2 class="mbr-fonts-style display-2"><br>Welcome to Korusu<br></h2><p class="lead mbr-text mbr-fonts-style display-5"><strong><br></strong><br>Consulting<br>Marketing Communication<br>and<br>EU Projects through Bologna, Italy<br><br><br><br><br><strong><br></strong></p><div class="mbr-section-btn" buttons="0"><a class="btn display-4 btn-warning" href="portfolio.html">Marketing Communication<br>Portfolio<br></a> <a class="btn  display-4 btn-warning" href="EUportfolio.html">EU Projects <br>Portfolio<br></a></div></div></div></div></div></div><div class="carousel-item slider-fullscreen-image" data-bg-video-slide="false" style="background-image: url(assets/images/peel-castle-sunset-1080x802.jpg);"><div class="container container-slide"><div class="image_wrapper"><div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(7, 59, 76);"></div><img src="assets/images/peel-castle-sunset-1080x802.jpg" alt="" title=""><div class="carousel-caption justify-content-center"><div class="col-10 align-center"><h2 class="mbr-fonts-style display-2">Marketing Communication
 <div><br></div></h2><p class="lead mbr-text mbr-fonts-style display-5">Message crafting 
 <br>Visual documents 
 <br>Helping you with ideas<br><br><br><br></p><div class="mbr-section-btn" buttons="0"><a class="btn display-4 btn-warning" href="portfolio.html">Marketing Communication<br>Portfolio<br></a> <a class="btn  display-4 btn-warning" href="EUportfolio.html">EU Projects <br>Portfolio<br></a></div></div></div></div></div></div><div class="carousel-item slider-fullscreen-image" data-bg-video-slide="false" style="background-image: url(assets/images/mbr-1080x1920.jpg);"><div class="container container-slide"><div class="image_wrapper"><div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(35, 35, 35);"></div><img src="assets/images/mbr-1080x1920.jpg" alt="" title=""><div class="carousel-caption justify-content-center"><div class="col-10 align-center"><h2 class="mbr-fonts-style display-2">EU Projects<br>through Bologna, Italy</h2><p class="lead mbr-text mbr-fonts-style display-5"><br>Multi-sector
