create github pages

--- a/ideahaven.html
+++ b/ideahaven.html
@@ -67,7 +67,7 @@ FOCUS IN THE WILD Education Resource for children ages 7-11
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="mbr-section content5 cid-s1OpQITyaX" id="content5-n">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="mbr-section content5 cid-s1OpQITyaX" id="content5-n">
 
     
 
@@ -157,11 +157,9 @@ FOCUS IN THE WILD Education Resource for children ages 7-11
                 <div class="media-container-row">
                     <div class="media-content">
                         <div class="mbr-section-text">
-                            <p class="mbr-text align-right mb-0 mbr-fonts-style display-7">My second project is currently in production and due out before end of June 2020. 
-<br><br>‍<strong>Focus in the Wild 
-<br>‍An education resource for Children (ages 7 - 11) learning at home</strong> 
-<br>‍‍ <br>My friend Philippe and I thought that we could produce a resource for children stuck at home who would like to learn more about World Wildlife from someone who has been to many hidden places around the world and taken some amazing pictures. Focus in the Wild was born out of this idea and will <strong>soon be available for everyone for free on request</strong>. 
-<br>
+                            <p class="mbr-text align-right mb-0 mbr-fonts-style display-7">My second project is:&nbsp;<br><br>‍<strong>Focus in the Wild 
+<br>‍An education resource for Children (ages 7 - 11) </strong><br><strong>learning at home</strong> 
+<br>‍‍ <br>My friend Philippe and I thought that we could produce a resource for children stuck at home who would like to learn more about World Wildlife from someone who has been to many hidden places around the world and taken some amazing pictures. Focus in the Wild was born out of this idea.<br><strong>Download Focus in the Wild Edition 1 - June 2020<a href="http://www.korusu.uk/FocusintheWild-June2020.pdf" target="_blank"> click here</a></strong>&nbsp;<br>
 <br>Philippe Ricordel, based in Paris, is a World Wildlife photographer and has taken many people on photo safaris to see wildlife in remote corners of the world including Japan, New Zealand, Norway, Brazil, Rwanda and Kenya.</p>
                         </div>
                     </div>
@@ -206,7 +204,7 @@ FOCUS IN THE WILD Education Resource for children ages 7-11
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
