--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive website templates</a></section><section class="testimonials5 cid-s1Yc4Y6hJF" id="testimonials5-1m">
+<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="testimonials5 cid-s1Yc4Y6hJF" id="testimonials5-1m">
 
     
 
@@ -90,7 +90,7 @@
                     <div class="card-footer">
                         <div class="mbr-author-name mbr-bold mbr-fonts-style mbr-white display-7">
                              Chris Swingler</div>
-                        <small class="mbr-author-desc mbr-italic mbr-light mbr-fonts-style mbr-white display-7">Project Leader - Korusu</small>
+                        <small class="mbr-author-desc mbr-italic mbr-light mbr-fonts-style mbr-white display-7">Consultant &amp; Project Leader - Korusu</small>
                     </div>
                 </div>
             </div></div>
@@ -106,11 +106,9 @@
             <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"><p><span style="font-size: 1.2rem;"><strong>Chris Swingler - Back Story</strong></span></p><p><span style="font-size: 1.2rem;"><strong>&nbsp;</strong></span><span style="font-size: 1.2rem;"></span></p><p><span style="font-size: 1.2rem;"><strong>Childhood</strong> in Zurich &amp; Istanbul.
 </span></p><p><span style="font-size: 1.2rem;"><strong>University</strong> in Sheffield. <em>Highlights:<br>&nbsp; &nbsp; * DJ for the Friday night Discos in Europe's largest hall of residence<br>&nbsp; &nbsp; * Worked on 2 productions in the Theatre Group with Eddie Izzard!</em></span></p><p><span style="font-size: 1.2rem;"><strong>Early career</strong> as a Programmer in London and Reading with CAP Group plc.
 </span></p><p><span style="font-size: 1.2rem;"><strong>First career move</strong> to work in Pre-Sales for Boston MA based Prime Computer, first in the London office and then in the Paris office.
-</span></p><p><span style="font-size: 1.2rem;">In 1991, I was offered a role as a Consultant and Trainer for Progress Software Corp. (NASDAQ PRGS) in the Paris office. I worked for clients all over France and twice for the water company in Abidjan, Ivory Coast.
-</span></p><p><span style="font-size: 1.2rem;">In 1996, I left Progress to start my own consulting and services business working for Specsavers Retail Systems for 4 years.
-</span></p><p><span style="font-size: 1.2rem;">Subsequently, I worked for many clients in France, UK, Italy, Germany, Turkey &amp; USA including:
-<br></span><span style="font-size: 1.2rem;">* NCR EMEA, WITS, Netsetup, RJW Services, Domilog, Kantena, CNAF&nbsp;<br></span><span style="font-size: 1.2rem;">* IAP, Atuana, Ulukom, Aptiva &nbsp;<br></span><span style="font-size: 1.2rem;">* The White Company, HP EMEA, Rhodes Events, Winterbird Interiors&nbsp;</span><span style="font-size: 1.2rem;"></span></p><p><span style="font-size: 1.2rem;">This first phase of my career was very technical in roles including Programmer, Pre-sales, Trainer, Consultant and Project management. During this time I also worked for the organic vineyards of Correns in the heart of green Provence, the first organic village in France and opened the market in the UK for their fine Decanter award winning wines.
-</span></p><p><span style="font-size: 1.2rem;">After a very techincal career, I moved to work in international sales for IAP GmbH in Hamburg and secured new clients for them in France, Italy &amp; Turkey. I then moved to open up a new business to help companies with Italy Market Entry for which I researched, recruited and retained business partners in Bologna.</span></p><p><span style="font-size: 1.2rem;">I have three children, Eleanor who is 8, Melvyn 24 and Richard 25. My father is doing very well at 91 :-) My mother very sadly passed away 20 years ago.</span></p></div>
+</span></p><p><span style="font-size: 1.2rem;">I was then offered a role as a Consultant and Trainer for Progress Software Corp. (NASDAQ PRGS) in the Paris office. I worked for clients all over France and twice for the water company in Abidjan, Ivory Coast.
+</span></p><p><span style="font-size: 1.2rem;">After nearly 6 years with Progress France, I left to start my own consulting and services business working initially for Specsavers Retail Systems for 4 years.&nbsp;</span><span style="font-size: 1.2rem;">Subsequently, I worked for many clients in France, UK, Italy, Germany, Turkey &amp; USA including:&nbsp;<br></span><span style="font-size: 1.2rem;">* NCR EMEA, WITS, Netsetup, RJW Services, Domilog, Kantena, CNAF&nbsp;<br></span><span style="font-size: 1.2rem;">* IAP, Atuana, Ulukom, Aptiva &nbsp;<br></span><span style="font-size: 1.2rem;">* The White Company, HP EMEA, Rhodes Events, Winterbird Interiors&nbsp;</span></p><p><span style="font-size: 1.2rem;"></span></p><p><span style="font-size: 1.2rem;">This first phase of my career was very technical in roles including Programmer, Pre-sales, Trainer, Consultant and Project management. During this time I also worked for the organic vineyards of Correns in the heart of green Provence, the first organic village in France and opened the market in the UK for their fine Decanter award winning wines.
+</span></p><p><span style="font-size: 1.2rem;">After a very techincal career, I moved to work in international sales for IAP GmbH in Hamburg and secured new clients for them in France, Italy &amp; Turkey. I then moved to open up a new business to help companies with Italy Market Entry for which I researched, recruited and retained business partners in Bologna.</span></p><p><span style="font-size: 1.2rem;">I have a daughter and 2 adult sons who are both graduates.</span></p></div>
         </div>
     </div>
 </section>
@@ -127,10 +125,9 @@
               <img src="assets/images/imag0091-1162x1565.jpg" alt="" title="">
             </div>
             <div class="media-content px-3 align-self-center mbr-white py-2">
-                    <p class="mbr-text testimonial-text mbr-fonts-style display-7">
-                       In the 1950's Chris's Mum and Dad drove from London to Antibes via Geneva on their Vespa called "Canard". Mum called it Canard, the French word for Duck, because she thought it looked like a Duck!</p>
-                    <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7">Photo taken in Antibes, France around the mid 1950's.</p>
-                    <p class="mbr-author-desc mbr-fonts-style display-7">John Swingler (Chris's Dad) and Pervenche Verdier (Chris's Mum) got married in 1956. They were together for 44 years before mum sadly passed away in July 2000.</p>
+                    <p class="mbr-text testimonial-text mbr-fonts-style display-7">Chris's Mum and Dad drove from London to Antibes via Geneva on their Vespa called "Canard". Mum called it Canard, the French word for Duck, because she thought it looked like a Duck!</p>
+                    <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7">Photo taken in Antibes, France.</p>
+                    <p class="mbr-author-desc mbr-fonts-style display-7">John Swingler (Chris's Dad) and Pervenche Verdier R.I.P. (Chris's Mum).&nbsp;</p>
             </div>
         </div>
     </div>
@@ -149,7 +146,7 @@
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
 </html>
