--- a/brandstory.html
+++ b/brandstory.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="header9 cid-s1UPLcD5lD" id="header9-1h">
+<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section class="header9 cid-s1UPLcD5lD" id="header9-1h">
 
     
 
@@ -74,7 +74,7 @@
         <div class="media-container-column mbr-white">
             <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-2">Korusu - Brand Story</h1>
             <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-5"><strong>Korusu is the Turkish word for Grove</strong></h3>
-            <p class="mbr-text align-left pb-3 mbr-fonts-style display-7">I got the idea for the name over 2 days of brain-storming and remembering where I used to live as a child in Istanbul from 1972 - 1977. <br>We lived on a steep street overlooking the Bosphorous near the Rumeli Hisar castle. It was called Ayse Sultan Korusu and the thought of naming the home of my creative brands with a name that came directly from&nbsp;where my home was in those years and evoking thoughts of Fruit Trees in a Grove and using the Turkish word became very appealing. <br><br>I think it sounds good too, like "Chorus" with (a) "u" added :-)<br><br><strong>Chris Swingler&nbsp;<br>Project Leader</strong><br><strong>Korusu<br></strong><br><br><br>
+            <p class="mbr-text align-left pb-3 mbr-fonts-style display-7">I got the idea for the name over 2 days of brain-storming and remembering where I used to live as a child in Istanbul. <br>We lived on a steep street overlooking the Bosphorous near the Rumeli Hisar castle. It was called Ayse Sultan Korusu and the thought of naming the home of my creative brands with a name that came directly from&nbsp;where my home was in those years and evoking thoughts of Fruit Trees in a Grove and using the Turkish word became very appealing. <br><br>I think it sounds good too, like "Chorus" with (a) "u" added :-)<br><br><strong>Chris Swingler&nbsp;<br>Project Leader</strong><br><strong>Korusu<br></strong><br><br><br>
 <br><strong><br>My background</strong> <a href="about.html">About Chris Swingler</a><br><br><strong><a href="portfolio.html"><br></a></strong><br></p>
             
         </div>
@@ -96,7 +96,7 @@
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
 </html>
