create github pages

--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="header15 cid-s1PeMQP4LN" id="header15-12">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="header15 cid-s1PeMQP4LN" id="header15-12">
 
     
 
@@ -81,7 +81,7 @@
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zb5HDpYvC7OL4rW+2qxdn1jtcM1gHVUkFccXcR9549odMiiDxNZmTy3tiAPqmucDcodTXDxUyNdJQK6kvm8Fbrok3/0N5Vz30m8vYXSLhTB1dVEGj5iZpVbbxJxZ0giF">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="IIZHXA4eBFpjgBVRtyeZDseBP/ftb4O/8SOj4V4+UPeAuUDUiAOACLHYlpEru3Ru07bAMj4AxNe/Sr//Fq/SfMqY+izu2NgmUhT1qS8JkGWM+Q0KND+6d6+sCOP29eph">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you. I will reply as soon as I can.</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -125,7 +125,7 @@
   <script src="assets/formoid/formoid.min.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
