--- a/EUportfolio.html
+++ b/EUportfolio.html
@@ -70,7 +70,7 @@ in partnership with Garavini Translations
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="header1 cid-s5hjgl90QI" id="header1-2z">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="header1 cid-s5hjgl90QI" id="header1-2z">
 
     
 
@@ -146,7 +146,7 @@ in partnership with Garavini Translations
             <div class="item features-image col-lg-4 col-md-6 col-sm-12">
                 <div class="item-wrapper">
                     <div class="item-img card-img">
-                        <img src="assets/images/risonanza-italian-connections-working-for-you-700x525.png" alt="" title="">
+                        <img src="assets/images/risonanza-eu-business-hub-bologna-card-blq-700x412.png" alt="" title="">
                     </div>
                     <div class="item-content">
                         <h4 class="item-title mbr-fonts-style pb-3 display-7">Projects with partners in Bologna 2015 - 2020</h4>
@@ -336,7 +336,7 @@ an Indian organic foods company
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
