--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@ in partnership with Garavini Translations
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="carousel slide cid-s2IOkizFks" data-interval="false" id="slider1-2j">
+<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section class="carousel slide cid-s2IOkizFks" data-interval="false" id="slider1-2j">
 
     
 
-    <div class="full-screen"><div class="mbr-slider slide carousel" data-pause="true" data-keyboard="false" data-ride="false" data-interval="false"><div class="carousel-inner" role="listbox"><div class="carousel-item slider-fullscreen-image active" data-bg-video-slide="false" style="background-image: url(assets/images/imag1758-uyosemde-2000x1485.jpg);"><div class="container container-slide"><div class="image_wrapper"><img src="assets/images/imag1758-uyosemde-2000x1485.jpg" alt="" title=""><div class="carousel-caption justify-content-center"><div class="col-10 align-center"><h2 class="mbr-fonts-style display-2"><br><br>Welcome to Korusu<br></h2><p class="lead mbr-text mbr-fonts-style display-5"><strong><br></strong><br>Consulting<br>Marketing Communication<br>and<br>EU Projects through Bologna, Italy<br><br><br><br><br><strong><br></strong></p><div class="mbr-section-btn" buttons="0"><a class="btn display-4 btn-warning" href="portfolio.html">Marketing Communication<br>Portfolio<br></a> <a class="btn  display-4 btn-warning" href="EUportfolio.html">EU Projects <br>Portfolio<br></a></div></div></div></div></div></div><div class="carousel-item slider-fullscreen-image" data-bg-video-slide="false" style="background-image: url(assets/images/peel-castle-sunset-1080x802.jpg);"><div class="container container-slide"><div class="image_wrapper"><div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(7, 59, 76);"></div><img src="assets/images/peel-castle-sunset-1080x802.jpg" alt="" title=""><div class="carousel-caption justify-content-center"><div class="col-10 align-center"><h2 class="mbr-fonts-style display-2">Marketing Communication
+    <div class="full-screen"><div class="mbr-slider slide carousel" data-pause="true" data-keyboard="false" data-ride="carousel" data-interval="8000"><div class="carousel-inner" role="listbox"><div class="carousel-item slider-fullscreen-image active" data-bg-video-slide="false" style="background-image: url(assets/images/imag1758-uyosemde-2000x1485.jpg);"><div class="container container-slide"><div class="image_wrapper"><img src="assets/images/imag1758-uyosemde-2000x1485.jpg" alt="" title=""><div class="carousel-caption justify-content-center"><div class="col-10 align-center"><h2 class="mbr-fonts-style display-2"><br><br>Welcome to Korusu<br></h2><p class="lead mbr-text mbr-fonts-style display-5"><strong><br></strong><br>Consulting<br>Marketing Communication<br>and<br>EU Projects through Bologna, Italy<br><br><br><br><br><strong><br></strong></p><div class="mbr-section-btn" buttons="0"><a class="btn display-4 btn-warning" href="portfolio.html">Marketing Communication<br>Portfolio<br></a> <a class="btn  display-4 btn-warning" href="EUportfolio.html">EU Projects <br>Portfolio<br></a></div></div></div></div></div></div><div class="carousel-item slider-fullscreen-image" data-bg-video-slide="false" style="background-image: url(assets/images/peel-castle-sunset-1080x802.jpg);"><div class="container container-slide"><div class="image_wrapper"><div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(7, 59, 76);"></div><img src="assets/images/peel-castle-sunset-1080x802.jpg" alt="" title=""><div class="carousel-caption justify-content-center"><div class="col-10 align-center"><h2 class="mbr-fonts-style display-2">Marketing Communication
 <div><br></div></h2><p class="lead mbr-text mbr-fonts-style display-5">Message crafting 
 <br>Visual documents 
 <br>Helping you with ideas<br><br><br><br></p><div class="mbr-section-btn" buttons="0"><a class="btn display-4 btn-warning" href="portfolio.html">Marketing Communication<br>Portfolio<br></a> <a class="btn  display-4 btn-warning" href="EUportfolio.html">EU Projects <br>Portfolio<br></a></div></div></div></div></div></div><div class="carousel-item slider-fullscreen-image" data-bg-video-slide="false" style="background-image: url(assets/images/mbr-1080x1920.jpg);"><div class="container container-slide"><div class="image_wrapper"><div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(35, 35, 35);"></div><img src="assets/images/mbr-1080x1920.jpg" alt="" title=""><div class="carousel-caption justify-content-center"><div class="col-10 align-center"><h2 class="mbr-fonts-style display-2"><br>EU Projects<br>through Bologna, Italy</h2><p class="lead mbr-text mbr-fonts-style display-5"><br>Multi-sector Italy Market Entry * Market evaluations
@@ -110,8 +110,8 @@ Garavini Translations<br><strong><br></strong></p><div class="mbr-section-btn" b
     <div class="container">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
-                <h2 class="align-center pb-3 mbr-fonts-style display-5">Download a 1 page .pdf summary of my<br>Marketing Communication and EU Project Services</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5"><strong><br>Here you can <a href="assets/files/KorusuProjectServices.pdf" target="_blank">download .pdf summary</a></strong><br><strong><a href="assets/files/Here%20to%20help%20your%20project.pdf" target="_blank"><br></a>I look forward to speaking with you soon.</strong></h3>
+                <h2 class="align-center pb-3 mbr-fonts-style display-5">Download a 1 page .pdf summary of my<br>Marketing Communication and EU Project Services<br><a href="assets/files/KorusuProjectServices.pdf" target="_blank">download .pdf summary</a>&nbsp;(opens in a new window)</h2>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5"><strong>I look forward to speaking with you soon.</strong></h3>
                 
             </div>
         </div>
@@ -184,7 +184,7 @@ Garavini Translations<br><strong><br></strong></p><div class="mbr-section-btn" b
   <script src="assets/slidervideo/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
