--- a/EUportfolio.html
+++ b/EUportfolio.html
@@ -70,19 +70,22 @@ in partnership with Garavini Translations
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a site for free</a></section><section class="header1 cid-s5hjgl90QI" id="header1-2z">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header1 cid-s5hjgl90QI" id="header1-2z">
 
     
 
-    <div class="mbr-overlay" style="opacity: 0.1; background-color: rgb(177, 163, 116);">
+    <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(35, 35, 35);">
     </div>
 
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-2"></h1>
-                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">EU Projects - Portfolio</h3>
-                <p class="mbr-text align-center pb-3 mbr-fonts-style display-5"></p>
+                <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-2"><span style="font-weight: normal;">EU Projects</span></h1>
+                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">Multi-sector Italy Market Entry * Market evaluations * Marketing campaigns * Sales Agency<br><br> 
+<div>Multi-sector Italy Buyers-Bridge * Your out-sourced procurement department for Made in Italy quality products</div><div><br></div><div>in partnership with Guidi Consulting 
+<span style="color: inherit; font-size: 1.2rem;"></span></div><br><div><br></div><div>Translations 
+</div><div>in partnership with Garavini Translations</div><br><div><br></div></h3>
+                <p class="mbr-text align-center pb-3 mbr-fonts-style display-2">Portfolio</p>
                 
             </div>
         </div>
