--- a/interestsparks.html
+++ b/interestsparks.html
@@ -66,7 +66,7 @@ World Wildlife Art Photography Limited Editions - by Philippe Ricordel">
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="features2 cid-s1OnFsoNOw" id="features2-m">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="features2 cid-s1OnFsoNOw" id="features2-m">
 
     
 
