create github pages

--- a/EUportfolio.html
+++ b/EUportfolio.html
@@ -70,7 +70,7 @@ in partnership with Garavini Translations
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header1 cid-s5hjgl90QI" id="header1-2z">
+<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="header1 cid-s5hjgl90QI" id="header1-2z">
 
     
 
@@ -159,7 +159,7 @@ in partnership with Garavini Translations
 .</em></div><div><em>* A UK gin manufacturer.
 </em></div><div><em>* An Italian wholesale distributor evaluation for 
 an Indian organic foods company
-.</em></div><br><div><strong>Italy Market Entry proposals with Giorgio Guidi &amp; Ruggero Rossini</strong></div><div><em>* Italian distribution evaluation for a UK based auto-motive safety accessories manufacturer.</em></div><br><div><strong>Italy Market Entry with Ruggero Rossini
+.</em></div><br><div><strong>Italy Market Entry proposals with Giorgio Guidi &amp; Ruggero Rossini</strong></div><div><em>* Italian distribution evaluation for a UK based automotive safety accessories manufacturer.</em></div><br><div><strong>Italy Market Entry with Ruggero Rossini
 </strong></div><div><em>* EU office search for a UK logistics company.</em></div><div><br></div></h5>
                         
                     </div>
@@ -339,7 +339,7 @@ an Indian organic foods company
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
 </html>
