--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ in partnership with Garavini Translations
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple site maker</a></section><section class="carousel slide cid-s2IOkizFks" data-interval="false" id="slider1-2j">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="carousel slide cid-s2IOkizFks" data-interval="false" id="slider1-2j">
 
     
 
@@ -184,7 +184,7 @@ Garavini Translations<br><strong><br></strong></p><div class="mbr-section-btn" b
   <script src="assets/slidervideo/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
 </html>
