create github pages

--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="header15 cid-s1PeMQP4LN" id="header15-12">
+<section class="engine"><a href="https://mobirise.info/d">free website maker</a></section><section class="header15 cid-s1PeMQP4LN" id="header15-12">
 
     
 
@@ -81,7 +81,7 @@
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5JNZ02JmJlbXSvxCcDIHJ5LucAdheSW5c36Bkaki6/dKlh96RHwg6GtVgC/7uewSbBID8jfm7LSF+nhCRKpW9GsyEbdhjJ2vp+Ynr+f8Nb3pvGVnwf0zEI+XEV13MYo8">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QqJrpeHtwAsNvre/fvOk77mWMkTsDz7mG2/R6sa9UuJvoFP25gHGtWtbjxNKn6Dm4IKgYhrqdZi5/AB0jeerAGiQSPbD5je5IgPAZ4vhXcEmxuuuypTTe4y9EN+VVjKo">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you. I will reply as soon as I can.</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -125,7 +125,7 @@
   <script src="assets/formoid/formoid.min.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
