--- a/EUportfolio.html
+++ b/EUportfolio.html
@@ -70,7 +70,7 @@ in partnership with Garavini Translations
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header1 cid-s5hjgl90QI" id="header1-2z">
+<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section class="header1 cid-s5hjgl90QI" id="header1-2z">
 
     
 
@@ -339,7 +339,7 @@ an Indian organic foods company
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
