--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ in partnership with Garavini Translations
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="carousel slide cid-s2IOkizFks" data-interval="false" id="slider1-2j">
+<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="carousel slide cid-s2IOkizFks" data-interval="false" id="slider1-2j">
 
     
 
@@ -142,7 +142,7 @@ Garavini Translations<br><strong><br></strong></p><div class="mbr-section-btn" b
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3"><strong>Address</strong></h5>
-                <p class="mbr-text">Korusu<br>30, Bankside<br>Kidlington<br>Oxford&nbsp;OX5 1JE<br>UK</p>
+                <p class="mbr-text">Korusu Ltd.<br>30, Bankside<br>Kidlington<br>Oxford&nbsp;OX5 1JE<br>Company no:&nbsp;12820787 registered in England and Wales</p>
             </div>
         </div>
         <div class="footer-lower">
@@ -181,7 +181,7 @@ Garavini Translations<br><strong><br></strong></p><div class="mbr-section-btn" b
   <script src="assets/slidervideo/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
